# axum-multipart-video

./: Cargo.toml  LICENSE  README.md
public_html/: index.html  video.js
src/: main.rs
