[package]
name = "video_service"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.3", features = ["multipart"] }
tokio = { version = "1.24.2", features = ["full"] }
include_dir = "0.7.3"
mime_guess = "2.0.4"
axum-client-ip = "0.3.1"
nanoid = "0.4.0"
futures = "0.3.25"
substring = "1.4.5"